# Proxy

./: .env.example  .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/desktopapp/: index.html  package.json  vite.config.ts
apps/desktopapp/src/: App.tsx  styles.css
apps/desktopapp/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktopapp/src-tauri/icons/: icon.icns
apps/desktopapp/src-tauri/src/: lib.rs  main.rs
apps/mobileapp/: App.tsx  app.json  package.json  tsconfig.json
apps/webapp/: index.html  package.json  vite.config.ts
apps/webapp/src/: App.tsx  shaping-api.ts  styles.css  suite-profile-store.ts
archive/: README.md
docs/: DEVELOPER_GUIDE.md  HANDOFFS.md  LOCAL_SERVICE_BOUNDARY.md  MODULE_MANIFEST.md  REPO_MAP.md  STABILITY_CHECKLIST.md  SUITE_HANDOFF_STANDARD.md
fixtures/handoffs/: direct-delivery-smoke-shape.json
profiles/default/: profile.json
profiles/default/tests/: rewrite-001.json  rewrite-002.json
scripts/: bootstrap.sh  check-env.sh  check-packages.mjs  doctor.sh  install-desktop-app.sh  validate-handoffs.mjs
