[package]
name = "proxy-desktopapp"
version = "0.1.0"
description = "tenra Proxy desktop shell"
authors = ["tenra"]
edition = "2021"

[lib]
name = "proxy_desktopapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
